lintian (2.2.3) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added
      - using-first-person-in-description
    + Removed
      - non-us-spelling

  * checks/common-data.pm:
    + [ADB] Remove the obsolete non-US from the list of recognised archive
      sections.
  * checks/copyright-file:
    + [RA] Treat License: GPL-2+ as "GPL version 2 or later" for the
      purposes of the check for a correctly versioned license reference.
      Patch from Evgeni Golov.  (Closes: #513946)
  * checks/cruft.desc:
    + [RA] Downgrade all source-contains-* tags to pedantic.  These are
      upstream problems the packager can't do much about and they have
      no practical effect on the Debian package.  Wishlist implies that
      a wishlist bug against the package would be appropriate, which
      seems too strong.
  * checks/description{,.desc}:
    + [RA] Check for using first person in package descriptions, similar
      to the existing check for debconf questions.  Patch from Raphael
      Geissert.  (Closes: #513053)
  * checks/fields{,.desc}:
    + [ADB] Remove checks for the capitalisation of the obsolete non-US
      archive section.
  * checks/files:
    + [ADB] Don't report duplicate-font-file for udebs.  Patch by Raphael
      Geissert.  (Closes: #514095)

  * lib/Spelling.pm:
    + [RA] Add some additional typo and case corrections.  Patch from
      Raphael Geissert.

  * unpack/list-{binpkg,udebpkg}:
    + [RA] Preserve the source_version field from the previous list when
      adding new packages, remove some dead code, and restructure for
      improved readability.  Thanks to Jordà Polo for the analysis.
      (Closes: #507849)

 -- Russ Allbery <rra@debian.org>  Mon, 02 Feb 2009 09:41:37 -0800

lintian (2.2.2) unstable; urgency=low

  The "this is why spooky action at a distance is bad" release.

  * checks/copyright-file:
    + [ADB] Treat the new copyright file format's "License-Alias: Perl" as