@@ -333,6 +333,29 @@ Info: The "Homepage:" field in this package's control file does not
  contain a valid absolute URL. Most probably you forgot to specify
  the scheme (e.g. http).
 
+Tag: no-homepage-field
+Severity: pedantic
+Certainty: possible
+Info: This non-native package lacks a <tt>Homepage</tt> field.  If the
+ package has an upstream home page that contains useful information or
+ resources for the end user, consider adding a <tt>Homepage</tt> control
+ field to <tt>debian/control</tt>.
+Ref: policy 5.6.23
+
+Tag: homepage-for-cpan-package-contains-version
+Severity: minor
+Certainty: certain
+Info: The Homepage field for this package points to CPAN and the URL
+ includes the version.  It's better to link to the unversioned CPAN page
+ so that the URL doesn't have to be updated for each new release.  For
+ example, use:
+ .
+   http://search.cpan.org/~samtregar/HTML-Template/
+ .
+ not:
+ .
+   http://search.cpan.org/~samtregar/HTML-Template-2.9/
+
 Tag: obsolete-field
 Severity: important
 Certainty: certain
@@ -931,12 +954,3 @@ Info: This package is also provided by one of the Perl core packages
  .
  Example: perl-modules (&gt;= 5.10.0) | libmodule-build-perl (&gt;= 0.26)
 Ref: policy 7.5
-
-Tag: no-homepage-field
-Severity: pedantic
-Certainty: possible
-Info: This non-native package lacks a <tt>Homepage</tt> field.  If the
- package has an upstream home page that contains useful information or
- resources for the end user, consider adding a <tt>Homepage</tt> control
- field to <tt>debian/control</tt>.
-Ref: policy 5.6.23
