@@ -1,0 +1,6 @@
+Testname: description-homepage
+Sequence: 6000
+Version: 1.0
+Skeleton: pedantic
+Options: --pedantic -I -E
+Description: Test for a homepage reference in the description
