@@ -2,6 +2,8 @@ lintian (2.2.3) UNRELEASED; urgency=low
 
   * Summary of tag changes:
     + Added
+      - description-possibly-contains-homepage (pedantic)
+      - homepage-for-cpan-package-contains-version
       - using-first-person-in-description
     + Removed
       - non-us-spelling
@@ -23,9 +25,14 @@ lintian (2.2.3) UNRELEASED; urgency=low
     + [RA] Check for using first person in package descriptions, similar
       to the existing check for debconf questions.  Patch from Raphael
       Geissert.  (Closes: #513053)
+    + [RA] Add pedantic check for apparent home page URLs in the long
+      description with no Homepage field.  Based on a patch by Paul Wise.
+      (Closes: #339829)
   * checks/fields{,.desc}:
     + [ADB] Remove checks for the capitalisation of the obsolete non-US
       archive section.
+    + [RA] Warn about Homepage fields pointing to search.cpan.org pages
+      containing a version number.  Based on a patch by Paul Wise.
   * checks/files:
     + [ADB] Don't report duplicate-font-file for udebs.  Patch by Raphael
       Geissert.  (Closes: #514095)
